--- a/login3.html
+++ b/login3.html
@@ -73,7 +73,7 @@ span.psw {
 </style>
 </head>
 <body>
-<h2>Archivos Secretos Gnius #3</h2>
+<h2>Bóveda Innovaland #3</h2>
 <script>
    function user1() {
   var user = document.getElementById('uname').value
